# hmmer-pure-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  REAL_WORLD_FIXTURES.md  SEED_PROBLEM.md  TODO.md  TRACE_PARITY.md  build.rs  ccc_mapping.toml
examples/: extract_binary_hmms.rs
scripts/: benchmark_new_real_all_tools.sh  benchmark_real_world.sh  benchmark_realistic_all_tools.sh  benchmark_realistic_compare_c.sh  benchmark_utilities.sh  download_new_real_world_fixtures.sh  download_realistic_fixtures.sh  setup_real_world_fixture_dirs.sh
src/: alphabet.rs  bg.rs  builder.rs  calibrate.rs  domaindef.rs  dsqdata.rs  errors.rs  eweight.rs  fm_index.rs  hmm.rs  hmmfile.rs  hmmfile_binary.rs  lib.rs  logsum.rs  main.rs  msa.rs  output.rs  pipeline.rs  pressed.rs  prior.rs  profile.rs  seqmodel.rs  sequence.rs  spensemble.rs  ssi.rs  tophits.rs  trace.rs
src/dp/: generic_backward.rs  generic_decoding.rs  generic_fwdback.rs  generic_msv.rs  generic_null2.rs  generic_optacc.rs  generic_stotrace.rs  generic_viterbi.rs  gmx.rs  mod.rs
src/simd/: avx2_fwd.rs  avx2_msv.rs  avx2_vit.rs  bck_decoding.rs  bck_filter.rs  fm_ssv.rs  fwd_filter.rs  mod.rs  msv_filter.rs  neon_fwd.rs  neon_msv.rs  neon_vit.rs  oprofile.rs  optacc.rs  probmx.rs  ssv_filter.rs  ssv_longtarget.rs  vit_filter.rs
src/stats/: exponential.rs  gumbel.rs  mod.rs
src/subcmd/: alimask.rs  hmmalign.rs  hmmbuild.rs  hmmconvert.rs  hmmemit.rs  hmmfetch.rs  hmmlogo.rs  hmmpgmd.rs  hmmpress.rs  hmmscan.rs  hmmsearch.rs  hmmsim.rs  hmmstat.rs  jackhmmer.rs  makehmmerdb.rs  mod.rs  nhmmer.rs  nhmmscan.rs  phmmer.rs
src/util/: cmath.rs  mod.rs  random.rs  simd_env.rs  vectorops.rs
test_data/: 7tm_1_pfam.hmm  AAA_pfam.hmm  ABC_tran_pfam.hmm  Ank_pfam.hmm  GTP_EFTU_pfam.hmm  Globin_pfam.hmm  Homeodomain_pfam.hmm  Pkinase_Tyr_pfam.hmm  RRM_1_pfam.hmm  RVT_1_pfam.hmm  Ras_pfam.hmm  Sugar_tr_pfam.hmm  Trypsin_pfam.hmm  WD40_pfam.hmm  adh_short_pfam.hmm  gecco_cluster1_hmms.hmm  gecco_cluster1_proteins.faa  gecco_full_pfam_selected_proteins.faa  gecco_pfam_stochastic_selected_hmms.h3m  gecco_pfam_stochastic_selected_proteins.faa  ig_pfam.hmm  zf_C2H2_pfam.hmm
test_data/mapali/: 20aa-rebuilt.hmm  Caudal_act-rebuilt.hmm  README.md  ecori-query.fa  ecori-rebuilt.hmm
tests/: cli_option_rejections.rs  cli_output_parity.rs  deep_comparator_probmx.rs  domain_envelope_tests.rs  ecoli_sensitivity_tests.rs  gecco_pyhmmer_regression_tests.rs  golden_file_tests.rs  hmmalign_integration_tests.rs  jackhmmer_integration_tests.rs  performance_tests.rs  pfam_equivalence_tests.rs  phmmer_integration_tests.rs  pipeline_sensitivity_tests.rs  real_world_regression_tests.rs  rust_hmmsearch_tests.rs
tests/golden/: 20aa.stdout  20aa.tblout  fn3_vs_7less.domtblout  fn3_vs_7less.stdout  fn3_vs_7less.tblout  fn3_vs_7less_dom.tblout  gecco_cluster1_pyhmmer.tsv  gecco_full_pfam_selected_pyhmmer.tsv  gecco_missed2.stdout  gecco_missed2.tblout  gecco_missed3.stdout  gecco_missed3.tblout  gecco_missed4.stdout  gecco_missed4.tblout  gecco_missed_vs_missed.stdout  gecco_missed_vs_missed.tblout  gecco_pfam5_vs_gecco.stdout  gecco_pfam5_vs_gecco.tblout  globins4_vs_globins45.stdout  globins4_vs_globins45.tblout  hmmbuild_20aa.stdout  hmmbuild_fn3.stdout  hmmconvert_20aa.stdout  hmmemit_20aa.stdout  hmmsearch_20aa.domtblout  hmmsearch_20aa.stdout  hmmsearch_20aa.tblout  hmmsearch_caudal.domtblout  hmmsearch_caudal.stdout  hmmsearch_caudal.tblout  hmmsearch_fn3.domtblout  hmmsearch_fn3.stdout  hmmsearch_fn3.tblout  hmmstat_20aa.stdout  nhmmer_3box.stdout  nhmmer_3box.tblout  nhmmer_ecori.stdout  nhmmer_ecori.tblout  nhmmer_made1.stdout  nhmmer_made1.tblout  (+21 more)
