[package]
name = "hmmer-pure-rs"
version = "0.6.0"
edition = "2021"
description = "Pure Rust port of HMMER 3.4 — biological sequence analysis using profile HMMs"
license = "BSD-3-Clause"
repository = "https://github.com/henriksson-lab/hmmer-pure-rs"
homepage = "https://github.com/henriksson-lab/hmmer-pure-rs"
documentation = "https://docs.rs/hmmer-pure-rs"
readme = "README.md"
keywords = ["bioinformatics", "hmm", "hmmer", "sequence-analysis", "profile-hmm"]
categories = ["science", "command-line-utilities"]
include = [
    "src/**/*.rs",
    "tests/**/*.rs",
    "tests/golden/**",
    "test_data/**",
    "hmmer/tutorial/**",
    "hmmer/testsuite/**",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "!test_data/human_swissprot_2k.fasta",
    "!test_data/human_swissprot_2k.fasta.gz",
    "!hmmer/testsuite/gecco_missed2_hmms.hmm",
    "!hmmer/testsuite/gecco_missed_hmms.hmm",
    "!hmmer/testsuite/gecco_missed3_hmms.hmm",
    "!hmmer/testsuite/gecco_missed4_hmms.hmm",
    "!hmmer/testsuite/minipfam.hmm",
    "!hmmer/testsuite/SMC_N.hmm",
    "!hmmer/testsuite/gecco_pfam5.hmm",
    "!hmmer/testsuite/Patched.hmm",
    "!hmmer/tutorial/dna_target.fa",
    "!tests/golden/pfam_7tm_1.tblout",
    "!tests/golden/pfam_ig.tblout",
    "!tests/golden/pfam_zf_C2H2.tblout",
    "!tests/golden/pfam_Pkinase.tblout",
    "!tests/golden/pfam_Pkinase_Tyr.tblout",
    "!test_data/Sugar_tr_pfam.hmm",
    "!test_data/Pkinase_pfam.hmm",
    "!test_data/Pkinase_Tyr_pfam.hmm",
    "!test_data/Trypsin_pfam.hmm",
]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
rayon = "1"
divsufsort = "2"
flate2 = "1"
tracehash = { package = "tracehash-rs", version = "0.1", optional = true }

[features]
tracehash = ["dep:tracehash"]

[[bin]]
name = "hmmer"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
deep-comparator-rs = { path = "../deep-comparator", default-features = false }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
