[package]
name = "hmmer-pure-rs"
version = "0.7.0"
edition = "2021"
description = "Pure Rust port of HMMER 3.4 — biological sequence analysis using profile HMMs"
license = "BSD-3-Clause"
repository = "https://github.com/henriksson-lab/hmmer-pure-rs"
homepage = "https://github.com/henriksson-lab/hmmer-pure-rs"
documentation = "https://docs.rs/hmmer-pure-rs"
readme = "README.md"
keywords = ["bioinformatics", "hmm", "hmmer", "sequence-analysis", "profile-hmm"]
categories = ["science", "command-line-utilities"]
include = [
    "src/**/*.rs",
    "tests/**/*.rs",
    "tests/golden/**",
    "test_data/**",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "!hmmer/**",
    "!test_data/human_swissprot_2k.fasta",
    "!test_data/human_swissprot_2k.fasta.gz",
    "!test_data/gecco_cluster1_proteins.faa",
    "!test_data/gecco_full_pfam_selected_hmms.h3m",
    "!tests/golden/pfam_7tm_1.tblout",
    "!tests/golden/pfam_ig.tblout",
    "!tests/golden/pfam_zf_C2H2.tblout",
    "!tests/golden/pfam_Pkinase.tblout",
    "!tests/golden/pfam_Pkinase_Tyr.tblout",
    "!test_data/Sugar_tr_pfam.hmm",
    "!test_data/Pkinase_pfam.hmm",
    "!test_data/Pkinase_Tyr_pfam.hmm",
    "!test_data/Trypsin_pfam.hmm",
]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
rayon = "1"
divsufsort = "2"
flate2 = "1"
tracehash = { package = "tracehash-rs", version = "0.1", optional = true }

[features]
tracehash = ["dep:tracehash"]

[[bin]]
name = "hmmer"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
