[package]
name = "hmmer-pure-rs"
version = "0.7.2"
edition = "2021"
description = "Pure Rust port of HMMER 3.4 — biological sequence analysis using profile HMMs"
license = "BSD-3-Clause"
repository = "https://github.com/henriksson-lab/hmmer-pure-rs"
homepage = "https://github.com/henriksson-lab/hmmer-pure-rs"
documentation = "https://docs.rs/hmmer-pure-rs"
readme = "README.md"
keywords = ["bioinformatics", "hmm", "hmmer", "sequence-analysis", "profile-hmm"]
categories = ["science", "command-line-utilities"]
include = [
    "src/**/*.rs",
    "examples/**/*.rs",
    "tests/**/*.rs",
    "test_data/**",
    "scripts/*.sh",
    "REAL_WORLD_FIXTURES.md",
    "hmmer/tutorial/**",
    "hmmer/testsuite/**",
    "hmmer/easel/formats/genbank",
    "hmmer/easel/esl_scorematrix.c",
    "hmmer/LICENSE",
    "hmmer/README.md",
    "hmmer/easel/LICENSE",
    "hmmer/easel/README.md",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "!tests/cli_output_parity.rs",
    "!tests/domain_envelope_tests.rs",
    "!tests/ecoli_sensitivity_tests.rs",
    "!tests/gecco_pyhmmer_regression_tests.rs",
    "!tests/hmmalign_integration_tests.rs",
    "!tests/jackhmmer_integration_tests.rs",
    "!tests/performance_tests.rs",
    "!tests/pfam_equivalence_tests.rs",
    "!tests/phmmer_integration_tests.rs",
    "!tests/pipeline_sensitivity_tests.rs",
    "!tests/real_world_regression_tests.rs",
    "!tests/rust_hmmsearch_tests.rs",
    "!tests/golden/**",
    "!Cargo.toml.orig",
    "!test_data/human_swissprot_2k.fasta",
    "!test_data/human_swissprot_2k.fasta.gz",
    "!test_data/gecco_full_pfam_selected_hmms.h3m",
    "!tests/golden/pfam_7tm_1.tblout",
    "!tests/golden/pfam_ig.tblout",
    "!tests/golden/pfam_zf_C2H2.tblout",
    "!tests/golden/pfam_Pkinase.tblout",
    "!tests/golden/pfam_Pkinase_Tyr.tblout",
    "!test_data/Sugar_tr_pfam.hmm",
    "!test_data/Pkinase_Tyr_pfam.hmm",
    "!test_data/Trypsin_pfam.hmm",
    "!hmmer/tutorial/Makefile*",
    "!hmmer/testsuite/Makefile*",
    "!hmmer/testsuite/*.pm",
    "!hmmer/testsuite/*.pl",
    "!hmmer/testsuite/*.py",
    "!hmmer/testsuite/*.sh",
    "!hmmer/testsuite/*.log",
    "!hmmer/testsuite/*.tmp",
    "!hmmer/testsuite/*.ssi",
]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
rayon = "1"
divsufsort = "2"
flate2 = "1"
libc = "0.2"
tracehash = { package = "tracehash-rs", version = "0.1", optional = true }

[features]
tracehash = ["dep:tracehash"]

[[bin]]
name = "hmmer"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
